# 23203_simakov

./: .gitignore
forth/: CMakeLists.txt  launch  lol  main.cpp
forth/interpreter/: forth.cpp  forth.hpp
forth/interpreter/basics/: basics.hpp  decl.hpp  doLoop.hpp  errors.hpp  expression.cpp  expression.hpp  ifThen.hpp  token.hpp  tokens.hpp  valueToken.hpp  var.hpp
forth/interpreter/basics/commands/: add.hpp  command.hpp  command_factory.hpp  commands.cpp  cr.hpp  div.hpp  dot.hpp  drop.hpp  dup.hpp  emit.hpp  eq.hpp  g.hpp  l.hpp  logic.cpp  logic.hpp  math.cpp  math.hpp  mult.hpp  over.hpp  rot.hpp  subtract.hpp  swap.hpp
forth/interpreter/internals/: executionContext.hpp  hardcoded.hpp
forth/interpreter/internals/stack/: stack.cpp  stack.hpp
forth/io/: main.cpp  repl.cpp  repl.hpp  scanner.cpp  scanner.hpp
forth/test/: FORTH_basic_test.cpp  FORTH_command_test.cpp  FORTH_control_test.cpp  FORTH_logic_test.cpp  FORTH_math_test.cpp  execution_context_test.cpp  expression_test.cpp  main.cpp  nn.forth  ny.forth  repl.cpp  repl.hpp  repl_test.cpp  stack_test.cpp  tokens_test.cpp
hash_table/: allah.cpp  main  main.cpp  vec
hash_table/lib/: hash_table.h  hash_table.hpp  vector.hpp
hash_table/src/: hash_table.cpp  vector.cpp
hash_table/test/: test.cpp  test_hash_table.cpp  test_vector.cpp
shared_pointer/lib/: shared_ptr.hpp
starcraft/src/: zerling.h
vector/lib/: Vector.h
vector/src/: Vector.cpp
vector/test/: test.cpp
